--- a/index.htm
+++ b/index.htm
@@ -44,6 +44,10 @@
             <option value="Ticket: ">Ticket: </option>
             <option value="SPOC CME contactado.">SPOC CME contactado.</option>
             <option value="SPOC ZENER contactado.">SPOC ZENER contactado.</option>
+            <option value="Tentativa de contacto sem sucesso com SPOC Zener xxx.">Tentativa de contacto sem sucesso com SPOC Zener xxx.</option>
+            <option value="Tentativa de contacto sem sucesso com SPOC CME.">Tentativa de contacto sem sucesso com SPOC CME.</option>
+            <option value="Tickets SNR: ">Tickets SNR:</option>
+            <option value="XXXXX: Nó Óptico com problemas. Supervisão a averiguar.">XXXXX: Nó Óptico com problemas. Supervisão a averiguar.</option>
         </select>
 
     </div>
