--- a/index.htm
+++ b/index.htm
@@ -40,7 +40,8 @@
         <textarea name="txtDescricao" id="txtDescricao" cols="30" rows="10">Técnico *nome* (*contacto*) contacta e informa que
         </textarea>
 
-        <input type="button" id="inpCopiar" value="Copiar">
+        <input type="button" id="inpCopiar" value="Copiar"
+        class="btn btn-primary">
 
         <select name="select" id="select">
             <option value="Afetação dispersa.">Afetação dispersa.</option>
