--- a/index.htm
+++ b/index.htm
@@ -26,8 +26,12 @@
         <textarea name="txtDescricao" id="txtDescricao" cols="30" rows="10">Técnico *nome* (*contacto*) contacta e informa que
         </textarea>
 
-        <input type="button" id="inpCopiar" value="Copiar"
-        class="btn btn-primary">
+
+        <!--
+            <input type="button" id="inpCopiar" value="Copiar"
+            class="btn btn-primary">
+        -->
+        <button class="btn btn-primary" id="inpCopiar">Copiar</button>
 
         <select name="select" id="select">
             <option value="Afetação dispersa.">Afetação dispersa.</option>
