--- a/index.htm
+++ b/index.htm
@@ -17,13 +17,13 @@
 <body>
 
     <div class="m-2">
-        <label for="inpNomeTec">Nome do técnico</label>
+        <label for="inpNomeTec" class="font-bold">Nome do técnico</label>
         <input type="text" name="inpNomeTec" id="inpNomeTec" class="border-2 border-orange-500 rounded">
 
-        <label for="inpContactoTec">Contacto do técnico</label>
+        <label for="inpContactoTec" class="font-bold">Contacto do técnico</label>
         <input type="text" name="inpContactoTec" id="inpContactoTec" class="border-2 border-orange-500 rounded">
 
-        <textarea name="txtDescricao" id="txtDescricao" cols="30" rows="10" class="border-2 border-orange-500 rounded p-1">Técnico *nome* (*contacto*) contacta e informa que
+        <textarea name="txtDescricao" id="txtDescricao" cols="30" rows="10" class="border-2 border-orange-500 rounded p-1">Técnico *nome* (*contacto*) contactou e informa que
         </textarea>
 
         <button class="bg-orange-500 rounded w-20 text-white font-bold mybtn" id="inpCopiar">Copiar</button>
