--- a/index.htm
+++ b/index.htm
@@ -23,7 +23,8 @@
         <label for="inpContactoTec" class="font-bold">Contacto do técnico</label>
         <input type="text" name="inpContactoTec" id="inpContactoTec" class="border-2 border-orange-500 rounded">
 
-        <textarea name="txtDescricao" id="txtDescricao" cols="30" rows="10" class="border-2 border-orange-500 rounded p-1">Técnico *nome* (*contacto*) contactou e informa que
+        <textarea name="txtDescricao" id="txtDescricao" cols="30" rows="10"
+            class="border-2 border-orange-500 rounded p-1">Técnico *nome* (*contacto*) contactou e informa que
         </textarea>
 
         <button class="bg-orange-500 rounded w-20 text-white font-bold mybtn" id="inpCopiar">Copiar</button>
