--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@
             class="border-2 border-orange-500 rounded p-1">Técnico *nome* (*contacto*) contactou e informa que
         </textarea>
 
-        <button class="bg-orange-500 rounded w-20 text-white font-bold mybtn" id="inpCopiar">Copiar</button>
+        <button class="bg-orange-500 rounded text-white font-bold mybtn" id="inpCopiar">Copiar</button>
 
         <select name="select" id="select" class="bg-orange-500 text-white rounded">
             <option value="Afetação dispersa.">Afetação dispersa.</option>
