--- a/index.htm
+++ b/index.htm
@@ -10,11 +10,16 @@
 
     <link rel="stylesheet" href="style.css">
 
-
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
+
+    <style>
+        * {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+    </style>
 
     <div class="grid m-2">
         <label for="inpNomeTec" class="font-bold">Nome do técnico</label>
@@ -27,7 +32,8 @@
             class="border-2 border-orange-500 rounded p-1 my-2 w-fit">Técnico *nome* (*contacto*) contactou e informa que
         </textarea>
 
-        <input type="button" value=" Copiar " id="inpCopiar" class="bg-orange-500 rounded text-white font-bold w-min my-2">
+        <input type="button" value=" Copiar " id="inpCopiar"
+            class="bg-orange-500 rounded text-white font-bold w-min my-2">
 
         <select name="select" id="select" class="bg-orange-500 text-white rounded mb-2 w-fit">
             <option value="Afetação dispersa.">Afetação dispersa.</option>
