--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
+<body class="dark:bg-neutral-900">
 
     <style>
         * {
@@ -21,11 +21,11 @@
         }
     </style>
 
-    <div class="grid m-2">
-        <label for="inpNomeTec" class="font-bold">Nome do técnico</label>
+    <div class="grid m-2 ">
+        <label for="inpNomeTec" class="text-white font-bold">Nome do técnico</label>
         <input type="text" name="inpNomeTec" id="inpNomeTec" class="border-2 border-orange-500 rounded w-fit">
 
-        <label for="inpContactoTec" class="font-bold">Contacto do técnico</label>
+        <label for="inpContactoTec" class="text-white font-bold">Contacto do técnico</label>
         <input type="text" name="inpContactoTec" id="inpContactoTec" class="border-2 border-orange-500 rounded w-fit">
 
         <textarea name="txtDescricao" id="txtDescricao" cols="30" rows="10"
