--- a/index.htm
+++ b/index.htm
@@ -48,6 +48,72 @@
             <option value="xxxxx: Nó Óptico com problemas. Supervisão a averiguar.">xxxxx: Nó Óptico com problemas.
                 Supervisão a averiguar.</option>
         </select>
+    </div>
+
+    <div class="bg-blue-500 text-white rounded m-2 p-2">
+        <h1 class="text-2xl font-bold text-center">
+            SoS Telegram
+        </h1>
+        <p>
+            (Exemplo preenchido com corte de fibra, podem ser outras situações) Enviar sempre templates em todos os
+            cortes de fibra
+            e situações que afetem mais de 500 clientes.
+        </p>
+    </div>
+
+    <div class="flex">
+        <div class="w-1/3 m-2 text-white ">
+            <div class="bg-blue-500 rounded p-2">
+                <h1 class="font-bold">
+                    **Abertura.**
+                </h1>
+                <p>
+                    Inicio: 16/10/2022 07:00 <br>
+                    Ticket: 9931981 <br>
+                    Corte Fibra: troço LEI-CMB <br>
+                    Incidente: br
+                    Causa: em investigação <br>
+                    Spoc: CME contactado <br>
+                    Field Nowo: contactado <br>
+                    Afetação: S/A*(sem afetação) ou 3000 clts* <br>
+                    Previsão: Sem ETR*(sem estimativa de resolução) ou x horas* <br>
+                </p>
+            </div>
+        </div>
+
+        <div class="w-1/3 m-2 text-white ">
+            <div class="bg-blue-500 rounded p-2">
+                <h1 class="font-bold">
+                    **Update:**
+                </h1>
+                <p>
+                    Inicio: 16/10/2022 07:00 <br>
+                    Ticket: 9931981 <br>
+                    Corte Fibra: troço LEI-CMB <br>
+                    Incidente: Corte a 10Km sentido LEI-CMB <br>
+                    Equipa de fibras: no local <br>
+                    Causa: Vandalismo <br>
+                    Previsão: 2h00 para resolução. <br>
+                </p>
+            </div>
+        </div>
+
+        <div class="w-1/3 m-2 text-white ">
+            <div class="bg-blue-500 rounded p-2">
+                <h1 class="font-bold">
+                    **Fecho:**
+                </h1>
+                <p>
+                    Inicio: 16/10/2022 07:00 <br>
+                    Fecho: 16/10/2022 11:00 <br>
+                    Ticket: 9931981 <br>
+                    Corte Fibra: troço LEI-CMB <br>
+                    Incidente: <br>
+                    Causa Incidente: Vandalismo <br>
+                    Resolução: Provisória - Falta recolocar dois postes. Cabos no chão. <br>
+                </p>
+            </div>
+        </div>
 
     </div>
 
