--- a/index.htm
+++ b/index.htm
@@ -50,8 +50,8 @@
         </select>
     </div>
 
-    <div class="bg-blue-500 text-white rounded m-2 p-2">
-        <h1 class="text-2xl font-bold text-center">
+    <div class="bg-blue-500 text-white text-center rounded m-2 p-2">
+        <h1 class="text-2xl font-bold">
             SoS Telegram
         </h1>
         <p>
