--- a/index.htm
+++ b/index.htm
@@ -8,8 +8,6 @@
     , initial-scale=1.0">
     <title>Helper</title>
 
-    <link rel="stylesheet" href="style.css">
-
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -50,6 +48,7 @@
         </select>
     </div>
 
+    <!-- SOS Telegram -->
     <div class="bg-blue-500 text-white text-center rounded m-2 p-2">
         <h1 class="text-2xl font-bold">
             SoS Telegram
@@ -64,29 +63,60 @@
     <div class="flex">
         <div class="w-1/3 m-2 text-white ">
             <div class="bg-blue-500 rounded p-2">
-                <h1 class="font-bold">
-                    **Abertura.**
+                <h1 class="font-bold" id="modeTitle">
+                    ** Abertura **
                 </h1>
-                <p>
-                    Inicio: 16/10/2022 07:00 <br>
-                    Ticket: 9931981 <br>
-                    Corte Fibra: troço LEI-CMB <br>
-                    Incidente: br
-                    Causa: em investigação <br>
-                    Spoc: CME contactado <br>
-                    Field Nowo: contactado <br>
-                    Afetação: S/A*(sem afetação) ou 3000 clts* <br>
-                    Previsão: Sem ETR*(sem estimativa de resolução) ou x horas* <br>
-                </p>
+                <span class="leading-4 grid w-fit">
+                    <label for="date">Início</label>
+                    <input type="datetime-local" id="date" class="border-2 border-orange-500 rounded w-fit text-black">
+
+                    <label for="ticket">Ticket: </label>
+                    <input type="text" id="ticket" class="border-2 border-orange-500 rounded w-fit text-black">
+
+                    <label for="troço">Corte fibra (troço): </label>
+                    <input type="text" id="troço" class="border-2 border-orange-500 rounded w-fit text-black">
+
+                    <label for="incidente">Incidente: </label>
+                    <input type="text" id="incidente" class="border-2 border-orange-500 rounded w-fit text-black">
+
+                    <label for="causa">Causa:</label>
+                    <input type="text" id="causa" class="border-2 border-orange-500 rounded w-fit text-black">
+
+                    <label for="spoc" class="ABERTURA">SPOC:</label>
+                    <input type="text" id="spoc" class="ABERTURA border-2 border-orange-500 rounded w-fit text-black">
+
+                    <label for="field" class="ABERTURA">Field NOWO: </label>
+                    <input type="text" id="field" class="ABERTURA border-2 border-orange-500 rounded w-fit text-black">
+
+                    <label for="afetação" class="ABERTURA">Afetação (nº clientes): </label>
+                    <input type="text" id="afetação"
+                        class="ABERTURA border-2 border-orange-500 rounded w-fit text-black" placeholder="S/A">
+
+                    <label for="previsão" class="ABERTURA UPDATE">Previsão (em horas): </label>
+                    <input type="text" id="previsão"
+                        class="ABERTURA UPDATE border-2 border-orange-500 rounded w-fit text-black"
+                        placeholder="S/ETR (estimativa de resolução)">
+
+                    <label for="equipaFibras" class="UPDATE">Equipa de fibras:</label>
+                    <input type="text" id="equipaFibras"
+                        class="UPDATE border-2 border-orange-500 rounded w-fit text-black">
+
+                    <label for="fecho" class="FECHO">Fecho</label>
+                    <input type="datetime-local" id="inpFecho"
+                        class="FECHO border-2 border-orange-500 rounded w-fit text-black">
+
+                    <input type="button" value=" Copiar " id="inpCopiar"
+                        class="bg-orange-500 rounded text-white font-bold w-min my-2">
+                </span>
             </div>
         </div>
 
         <div class="w-1/3 m-2 text-white ">
             <div class="bg-blue-500 rounded p-2">
                 <h1 class="font-bold">
-                    **Update:**
+                    ** Update **
                 </h1>
-                <p>
+                <p class="leading-6">
                     Inicio: 16/10/2022 07:00 <br>
                     Ticket: 9931981 <br>
                     Corte Fibra: troço LEI-CMB <br>
@@ -101,12 +131,12 @@
         <div class="w-1/3 m-2 text-white ">
             <div class="bg-blue-500 rounded p-2">
                 <h1 class="font-bold">
-                    **Fecho:**
+                    ** Fecho **
                 </h1>
                 <p>
                     Inicio: 16/10/2022 07:00 <br>
-                    Fecho: 16/10/2022 11:00 <br>
                     Ticket: 9931981 <br>
+                    Fecho: 16/10/2022 11:00 <br>
                     Corte Fibra: troço LEI-CMB <br>
                     Incidente: <br>
                     Causa Incidente: Vandalismo <br>
@@ -116,6 +146,17 @@
         </div>
 
     </div>
+
+
+    <label for="abertura" class="text-white">Abertura</label>
+    <input type="radio" name="tipo" id="abertura">
+
+    <label for="update" class="text-white">Update</label>
+    <input type="radio" name="tipo" id="update">
+
+    <label for="fecho" class="text-white">Fecho</label>
+    <input type="radio" name="tipo" id="fecho">
+
 
     <script src="/app.js"></script>
 </body>
