--- a/index.htm
+++ b/index.htm
@@ -67,33 +67,33 @@
                     ** Abertura **
                 </h1>
                 <span class="leading-4 grid w-fit">
-                    <label for="date">Início</label>
-                    <input type="datetime-local" id="date" class="border-2 border-orange-500 rounded w-fit text-black">
+                    <label for="inpDataInicio">Início</label>
+                    <input type="datetime-local" id="inpDataInicio" class="border-2 border-orange-500 rounded w-fit text-black">
 
-                    <label for="ticket">Ticket: </label>
-                    <input type="text" id="ticket" class="border-2 border-orange-500 rounded w-fit text-black">
+                    <label for="inpNumeroTicket">Ticket: </label>
+                    <input type="text" id="inpNumeroTicket" class="border-2 border-orange-500 rounded w-fit text-black">
 
-                    <label for="troço">Corte fibra (troço): </label>
-                    <input type="text" id="troço" class="border-2 border-orange-500 rounded w-fit text-black">
+                    <label for="inpTroçoCorte">Corte fibra (troço): </label>
+                    <input type="text" id="inpTroçoCorte" class="border-2 border-orange-500 rounded w-fit text-black">
 
-                    <label for="incidente">Incidente: </label>
-                    <input type="text" id="incidente" class="border-2 border-orange-500 rounded w-fit text-black">
+                    <label for="inpIncidente">Incidente: </label>
+                    <input type="text" id="inpIncidente" class="border-2 border-orange-500 rounded w-fit text-black">
 
-                    <label for="causa">Causa:</label>
-                    <input type="text" id="causa" class="border-2 border-orange-500 rounded w-fit text-black">
+                    <label for="inpCausa">Causa:</label>
+                    <input type="text" id="inpCausa" class="border-2 border-orange-500 rounded w-fit text-black">
 
-                    <label for="spoc" class="ABERTURA">SPOC:</label>
-                    <input type="text" id="spoc" class="ABERTURA border-2 border-orange-500 rounded w-fit text-black">
+                    <label for="inpSpoc" class="ABERTURA">SPOC:</label>
+                    <input type="text" id="inpSpoc" class="ABERTURA border-2 border-orange-500 rounded w-fit text-black">
 
-                    <label for="field" class="ABERTURA">Field NOWO: </label>
-                    <input type="text" id="field" class="ABERTURA border-2 border-orange-500 rounded w-fit text-black">
+                    <label for="inpField" class="ABERTURA">Field NOWO: </label>
+                    <input type="text" id="inpField" class="ABERTURA border-2 border-orange-500 rounded w-fit text-black">
 
-                    <label for="afetação" class="ABERTURA">Afetação (nº clientes): </label>
-                    <input type="text" id="afetação"
+                    <label for="inpAfetação" class="ABERTURA">Afetação (nº clientes): </label>
+                    <input type="text" id="inpAfetação"
                         class="ABERTURA border-2 border-orange-500 rounded w-fit text-black" placeholder="S/A">
 
-                    <label for="previsão" class="ABERTURA UPDATE">Previsão (em horas): </label>
-                    <input type="text" id="previsão"
+                    <label for="inpPrevisão" class="ABERTURA UPDATE">Previsão (em horas): </label>
+                    <input type="text" id="inpPrevisão"
                         class="ABERTURA UPDATE border-2 border-orange-500 rounded w-fit text-black"
                         placeholder="S/ETR (estimativa de resolução)">
 
@@ -101,7 +101,7 @@
                     <input type="text" id="equipaFibras"
                         class="UPDATE border-2 border-orange-500 rounded w-fit text-black">
 
-                    <label for="fecho" class="FECHO">Fecho</label>
+                    <label for="inpFecho" class="FECHO">Fecho</label>
                     <input type="datetime-local" id="inpFecho"
                         class="FECHO border-2 border-orange-500 rounded w-fit text-black">
 
