--- a/index.htm
+++ b/index.htm
@@ -68,25 +68,32 @@
                 </h1>
                 <span class="leading-4 grid w-fit">
                     <label for="inpDataInicio">Início</label>
-                    <input type="datetime-local" id="inpDataInicio" class="border-2 border-orange-500 rounded w-fit text-black">
+                    <input type="datetime-local" id="inpDataInicio"
+                        class="border-2 border-orange-500 rounded w-fit text-black">
 
                     <label for="inpNumeroTicket">Ticket: </label>
-                    <input type="text" id="inpNumeroTicket" class="border-2 border-orange-500 rounded w-fit text-black">
+                    <input type="text" id="inpNumeroTicket" class="border-2 border-orange-500 rounded w-fit text-black"
+                        placeholder="9999999">
 
                     <label for="inpTroçoCorte">Corte fibra (troço): </label>
-                    <input type="text" id="inpTroçoCorte" class="border-2 border-orange-500 rounded w-fit text-black">
+                    <input type="text" id="inpTroçoCorte" class="border-2 border-orange-500 rounded w-fit text-black"
+                        placeholder="LEI-CMB">
 
                     <label for="inpIncidente">Incidente: </label>
-                    <input type="text" id="inpIncidente" class="border-2 border-orange-500 rounded w-fit text-black">
+                    <input type="text" id="inpIncidente" class="border-2 border-orange-500 rounded w-fit text-black"
+                        placeholder="Corte a 10Km sentido LEI-CMB">
 
                     <label for="inpCausa">Causa:</label>
-                    <input type="text" id="inpCausa" class="border-2 border-orange-500 rounded w-fit text-black">
+                    <input type="text" id="inpCausa" class="border-2 border-orange-500 rounded w-fit text-black"
+                        placeholder="Vandalismo">
 
                     <label for="inpSpoc" class="ABERTURA">SPOC:</label>
-                    <input type="text" id="inpSpoc" class="ABERTURA border-2 border-orange-500 rounded w-fit text-black">
+                    <input type="text" id="inpSpoc"
+                        class="ABERTURA border-2 border-orange-500 rounded w-fit text-black">
 
                     <label for="inpField" class="ABERTURA">Field NOWO: </label>
-                    <input type="text" id="inpField" class="ABERTURA border-2 border-orange-500 rounded w-fit text-black">
+                    <input type="text" id="inpField"
+                        class="ABERTURA border-2 border-orange-500 rounded w-fit text-black">
 
                     <label for="inpAfetação" class="ABERTURA">Afetação (nº clientes): </label>
                     <input type="text" id="inpAfetação"
