--- a/index.htm
+++ b/index.htm
@@ -36,8 +36,8 @@
         <select name="select" id="select" class="bg-orange-500 text-white rounded mb-2 w-fit">
             <option value="Afetação dispersa.">Afetação dispersa.</option>
             <option value="Ticket: ">Ticket: </option>
-            <option value="SPOC CME contactado.">SPOC CME contactado.</option>
-            <option value="SPOC ZENER contactado.">SPOC ZENER contactado.</option>
+            <option value="SPOC CME contactado e informado.">SPOC CME contactado e informado.</option>
+            <option value="SPOC ZENER contactado e informado.">SPOC ZENER contactado e informado.</option>
             <option value="Tentativa de contacto sem sucesso com SPOC Zener xxx.">Tentativa de contacto sem sucesso com
                 SPOC Zener xxx.</option>
             <option value="Tentativa de contacto sem sucesso com SPOC CME.">Tentativa de contacto sem sucesso com SPOC
