--- a/index.htm
+++ b/index.htm
@@ -43,7 +43,7 @@
             <option value="Tentativa de contacto sem sucesso com SPOC CME.">Tentativa de contacto sem sucesso com SPOC
                 CME.</option>
             <option value="Tickets SNR: ">Tickets SNR:</option>
-            <option value="xxxxx: Nó Óptico com problemas. Supervisão a averiguar.">xxxxx: Nó Óptico com problemas.
+            <option value="xxxxx: Nó Ótico com problemas. Supervisão a averiguar.">xxxxx: Nó Ótico com problemas.
                 Supervisão a averiguar.</option>
         </select>
     </div>
