--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>Helper</title>
+    <title>Helper NOC</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
