--- a/index.htm
+++ b/index.htm
@@ -1,137 +1,163 @@
 <!DOCTYPE html>
-<html lang="pt-pt">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
-    <title>Helper NOC</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NOC HELPER</title>
 
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Link to bootstrap css folder -->
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <!-- Link to bootstrap js folder -->
+    <script src="/js/bootstrap.min.js"></script>
 </head>
 
-<body class="dark:bg-neutral-900">
+<body class="bg-dark text-white">
+    <nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-primary">
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 fw-bold">
+                    <li class="nav-item">
+                        <a href="#helperNoc" data-bs-toggle="collapse" class="nav-link">HELPER</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#sosTelegram" data-bs-toggle="collapse" class="nav-link">SOS TELEGRAM</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">TABELA DE ESCALAMENTO</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-    <style>
-        * {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-    </style>
+    <!-- Helper -->
+    <div id="accordion">
+        <div id="helperNoc" data-bs-parent="#accordion" class="collapse show" style="margin-top: 80px;">
+            <div class="container-sm d-flex flex-column">
 
-    <div class="grid m-2 md:w-1/4">
-        <label for="inpNomeTec" class="text-white font-bold">Nome do técnico</label>
-        <input type="text" name="inpNomeTec" id="inpNomeTec" class="border-2 border-orange-500 rounded md:w-fit">
+                <form class="form-floating text-dark mb-2 w-75 align-self-center">
+                    <input type="text" id="inpNomeTecnico" placeholder="*Nome do técnico*"
+                        class="form-control border border-primary border-2">
+                    <label for="inpNomeTecnico">Nome do técnico</label>
+                </form>
 
-        <label for="inpContactoTec" class="text-white font-bold">Contacto do técnico</label>
-        <input type="text" name="inpContactoTec" id="inpContactoTec" class="border-2 border-orange-500 rounded md:w-fit">
+                <form class="form-floating text-dark mb-2 w-75 align-self-center">
+                    <input type="text" name="" id="inpContactoTecnico" placeholder="*Contacto do técnico*"
+                        class="form-control border border-primary border-2">
+                    <label for="inpContactoTecnico">Contacto do técnico</label>
+                </form>
 
-        <textarea name="txtDescricao" id="txtDescricao" cols="30" rows="10"
-            class="border-2 border-orange-500 rounded p-1 my-2 md:w-fit">Técnico *nome* (*contacto*) contactou e informa que
-        </textarea>
+                <textarea id="txtDescrição" cols="30" rows="10"
+                    class="mb-2 rounded border border-primary border-2 w-75 align-self-center">Técnico *nome* (*contacto*) contacta e informa que </textarea>
 
-        <input type="button" value=" Copiar " id="inpCopiar"
-            class="bg-orange-500 rounded text-white font-bold md:w-fit my-2 p-1">
+                <button id="btnCopiar" class="btn fw-bold btn-primary w-75 align-self-center">Copiar</button>
 
-        <select name="select" id="select" class="bg-orange-500 text-white rounded mb-2 md:w-fit">
-            <option value="Afetação dispersa.">Afetação dispersa.</option>
-            <option value="Ticket: ">Ticket: </option>
-            <option value="SPOC CME contactado e informado.">SPOC CME contactado e informado.</option>
-            <option value="SPOC ZENER contactado e informado.">SPOC ZENER contactado e informado.</option>
-            <option value="Tentativa de contacto sem sucesso com SPOC Zener xxx.">Tentativa de contacto sem sucesso com
-                SPOC Zener xxx.</option>
-            <option value="Tentativa de contacto sem sucesso com SPOC CME.">Tentativa de contacto sem sucesso com SPOC
-                CME.</option>
-            <option value="Tickets SNR: ">Tickets SNR:</option>
-            <option value="xxxxx: Nó Ótico com problemas. Supervisão a averiguar.">xxxxx: Nó Ótico com problemas.
-                Supervisão a averiguar.</option>
-        </select>
-    </div>
+                <select id="select" class="form-select text-white bg-primary my-3 w-75 align-self-center">
+                    <option value="Afetação dispersa.">Afetação dispersa.</option>
+                    <option value="Em análise.">Em análise</option>
+                    <option value="SPOC ZENER contactado e informado.">SPOC ZENER contactado e informado.</option>
+                    <option value="SPOC CME contactado e informado.">SPOC CME contactado e informado.</option>
+                    <option value="Tentativa de contacto sem sucesso SPOC ZENER xxx.">Tentativa de contacto sem sucesso
+                        SPOC ZENER xxx.</option>
+                    <option value="Tentativa de contacto sem sucesso SPOC CME xxx.">Tentativa de contacto sem sucesso
+                        SPOC CME xxx.</option>
+                </select>
+            </div>
+        </div>
 
-    <!-- SOS Telegram -->
-    <div class="bg-blue-500 text-white text-center rounded m-2 p-2 md:w-1/4">
-        <h1 class="text-2xl font-bold">
-            SoS Telegram
-        </h1>
-        <p>
-            (Exemplo preenchido com corte de fibra, podem ser outras situações) Enviar sempre templates em todos os
-            cortes de fibra
-            e situações que afetem mais de 500 clientes.
-        </p>
+        <!-- SOS TELEGRAM -->
+        <div id="sosTelegram" data-bs-parent="#accordion" class="collapse" style="margin-top: 80px;">
+            <div class="container-sm p-2 bg-telegram rounded text-center w-75">
+                <h1 class="fw-bold">SOS TELEGRAM</h1>
+                <p>(Exemplo preenchido com corte de fibra, podem ser outras situações) Enviar sempre templates em todos
+                    os
+                    cortes de fibra
+                    e situações que afetem mais de 500 clientes.</p>
 
-        <button class="bg-red-500 rounded text-white font-bold md:w-fit m-2 p-1">
-            <label for="abertura" class="text-white">Abertura</label>
-            <input type="radio" name="tipo" id="abertura">
-        </button>
+                <button class="btn btn-danger">
+                    <label for="rdoAbertura" class="" aria-checked="">Abertura</label>
+                    <input type="radio" id="rdoAbertura" name="modo" class="" checked>
+                </button>
 
-        <button class="bg-orange-500 rounded text-white font-bold md:w-fit m-2 p-1">
-            <label for="update" class="text-white">Update</label>
-            <input type="radio" name="tipo" id="update">
-        </button>
+                <button class="btn btn-warning">
+                    <label for="rdoUpdate" class="form-check-label">Update</label>
+                    <input type="radio" id="rdoUpdate" name="modo">
+                </button>
 
+                <button class="btn btn-success">
+                    <label for="rdoFecho" class="form-check-label">Fecho</label>
+                    <input type="radio" id="rdoFecho" name="modo">
+                </button>
+            </div>
 
-        <button class="bg-green-500 rounded text-white font-bold md:md:w-fit m-2 p-1">
-            <label for="fecho" class="text-white">Fecho</label>
-            <input type="radio" name="tipo" id="fecho">
-        </button>
-    </div>
+            <div
+                class="container-sm p-2 my-2 bg-telegram w-75 rounded text-center d-flex flex-column justify-content-center align-items-center">
+                <h3 id="modeTitle">** Abertura **</h3>
 
-    <div class="md:w-1/4 m-2 text-white md:flex">
-        <div class="bg-blue-500 rounded  p-2">
-            <h1 class="font-bold my-2" id="modeTitle">
-                ** Abertura **
-            </h1>
-            <span class="leading-4 grid">
-                <label for="inpDataInicio">Início</label>
-                <input type="datetime-local" id="inpDataInicio"
-                    class="border-2 border-orange-500 rounded md:w-fit text-black">
+                <form class="form-floating text-dark my-1 w-50">
+                    <input type="datetime-local" id="inpDataInicio" class="form-control ">
+                    <label for="inpDataInicio">Início</label>
+                </form>
 
-                <label for="inpNumeroTicket">Ticket: </label>
-                <input type="text" id="inpNumeroTicket" class="border-2 border-orange-500 rounded md:w-fit text-black"
-                    placeholder="9999999">
+                <form class="form-floating text-dark my-1 w-50">
+                    <input type="text" id="inpNumeroTicket" class="form-control">
+                    <label for="inpNumeroTicket">Ticket</label>
+                </form>
 
-                <label for="inpTroçoCorte">Corte fibra (troço): </label>
-                <input type="text" id="inpTroçoCorte" class="border-2 border-orange-500 rounded md:w-fit text-black"
-                    placeholder="LEI-CMB">
+                <form class="form-floating text-dark my-1 w-50">
+                    <input type="text" id="inpTroço" class="form-control">
+                    <label for="inpTroço">Troço</label>
+                </form>
 
-                <label for="inpIncidente">Incidente: </label>
-                <input type="text" id="inpIncidente" class="border-2 border-orange-500 rounded md:w-fit text-black"
-                    placeholder="Corte a 10Km sentido LEI-CMB">
+                <form class="form-floating text-dark my-1 w-50">
+                    <input type="text" id="inpIncidente" class="form-control">
+                    <label for="inpIncidente">Incidente</label>
+                </form>
 
-                <label for="inpCausa">Causa:</label>
-                <input type="text" id="inpCausa" class="border-2 border-orange-500 rounded md:w-fit text-black"
-                    placeholder="Vandalismo">
+                <form class="form-floating text-dark my-1 w-50">
+                    <input type="text" id="inpCausa" class="form-control">
+                    <label for="inpCausa">Causa</label>
+                </form>
 
-                <label for="inpSpoc" class="ABERTURA">SPOC:</label>
-                <input type="text" id="inpSpoc" class="ABERTURA border-2 border-orange-500 rounded md:w-fit text-black">
+                <form class="ABERTURA form-floating text-dark my-1 w-50">
+                    <input type="text" id="inpSpoc" class="form-control">
+                    <label for="inpSpoc">SPOC</label>
+                </form>
 
-                <label for="inpField" class="ABERTURA">Field NOWO: </label>
-                <input type="text" id="inpField" class="ABERTURA border-2 border-orange-500 rounded md:w-fit text-black">
+                <form class="ABERTURA form-floating text-dark my-1 w-50">
+                    <input type="text" id="inpField" class="form-control">
+                    <label for="inpField">Field NOWO</label>
+                </form>
 
-                <label for="inpAfetação" class="ABERTURA">Afetação (nº clientes): </label>
-                <input type="text" id="inpAfetação" class="ABERTURA border-2 border-orange-500 rounded md:w-fit text-black"
-                    placeholder="S/A">
+                <form class="ABERTURA form-floating text-dark my-1 w-50">
+                    <input type="text" id="inpAfetação" class="form-control">
+                    <label for="inpAfetação">Afetação (nº de clientes)</label>
+                </form>
 
-                <label for="inpPrevisão" class="ABERTURA UPDATE">Previsão (em horas): </label>
-                <input type="text" id="inpPrevisão"
-                    class="ABERTURA UPDATE border-2 border-orange-500 rounded md:w-fit text-black"
-                    placeholder="S/ETR (estimativa de resolução)">
+                <form class="ABERTURA UPDATE form-floating text-dark my-1 w-50">
+                    <input type="text" id="inpPrevisão" class="form-control">
+                    <label for="inpPrevisão">Previsão de resolução (em horas)</label>
+                </form>
 
-                <label for="equipaFibras" class="UPDATE">Equipa de fibras:</label>
-                <input type="text" id="equipaFibras" class="UPDATE border-2 border-orange-500 rounded md:w-fit text-black">
+                <form class="UPDATE form-floating text-dark my-1 w-50">
+                    <input type="text" id="inpEquipaFibras" class="form-control">
+                    <label for="inpEquipaFibras">Equipa de Fibras</label>
+                </form>
 
-                <label for="inpFecho" class="FECHO">Fecho</label>
-                <input type="datetime-local" id="inpFecho"
-                    class="FECHO border-2 border-orange-500 rounded md:w-fit text-black">
+                <form class="FECHO form-floating text-dark my-1 w-50">
+                    <input type="datetime-local" id="inpDataFecho" class="form-control">
+                    <label for="inpDataFecho">Fecho</label>
+                </form>
 
-                <input type="button" value=" Copiar " id="inpCopiar"
-                    class="bg-orange-500 rounded text-white font-bold md:w-fit my-2 p-1">
-            </span>
+                <button class="btn btn-primary w-50">Copiar</button>
+            </div>
         </div>
     </div>
 
-    <script src="/app.js"></script>
-    <script src="/sosTelegram.js"></script>
+    <script src="/js/app.js"></script>
+    <script src="/js/sosTelegram.js"></script>
 </body>
 
 </html>
