--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,13 @@
 <body class="bg-dark text-white">
     <nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-primary">
         <div class="container-fluid">
-            <div class="collapse navbar-collapse">
+    
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+    
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 fw-bold">
                     <li class="nav-item">
                         <a href="#helperNoc" data-bs-toggle="collapse" class="nav-link">HELPER</a>
