--- a/index.htm
+++ b/index.htm
@@ -31,7 +31,7 @@
                         <a href="#sosTelegram" data-bs-toggle="collapse" class="nav-link">SOS TELEGRAM</a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link">TABELA DE ESCALAMENTO</a>
+                        <a href="" class="nav-link">MATRIZ DE ESCALAMENTO</a>
                     </li>
                 </ul>
             </div>
