--- a/index.htm
+++ b/index.htm
@@ -169,9 +169,9 @@
                 <div class="table-responsive">
                     <table class="table align-middle text-center table-bordered table-striped table-dark">
                         <thead class="align-middle">
-                            <th scope="col" class="bg-primary">FAILURE</th>
-                            <th scope="col" class="bg-primary">TT Info Update (max.)</th>
-                            <th scope="col" colspan="4" class="bg-primary">Escalation procedure</th>
+                            <th scope="col" class="bg-secondary">FAILURE</th>
+                            <th scope="col" class="bg-secondary">TT Info Update (max.)</th>
+                            <th scope="col" colspan="4" class="bg-secondary">Escalation procedure</th>
                         </thead>
                         <tbody>
                             <tr>
@@ -259,6 +259,45 @@
                                 <td>5min</td>
                                 <td>2H</td>
                                 <td>8H</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                    <table class="table table-dark table-bordered table-striped text-center align-middle">
+                        <thead>
+                            <th colspan="5" class="bg-secondary">Escalamento interno</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td colspan="5"></td>
+                            </tr>
+                            <tr>
+                                <th>Escalation level</th>
+                                <th>Role</th>
+                                <th>Name</th>
+                                <th>Phone</th>
+                                <th>Email</th>
+                            </tr>
+                            <tr>
+                                <td>Level 1</td>
+                                <td>NOC</td>
+                                <td>Tech on duty</td>
+                                <td>+351 210 801 005</td>
+                                <td>Surveillance@nowo.pt</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="26">Level 2</td>
+                                <td rowspan="6">Zener - sectores</td>
+                                <td>Palmela / Lisboa</td>
+                                <td colspan="2">928043168</td>
+                            </tr>
+                            <tr>
+                                <td>Caldas da Rainha</td>
+                                <td colspan="2">928025416</td>
+                            </tr>
+                            <tr>
+                                <td>Algarve</td>
+                                <td colspan="2">928034863</td>
                             </tr>
                         </tbody>
                     </table>
