--- a/index.htm
+++ b/index.htm
@@ -299,6 +299,36 @@
                                 <td>Algarve</td>
                                 <td colspan="2">928034863</td>
                             </tr>
+                            <tr>
+                                <td>Elvas / Portalegre</td>
+                                <td colspan="2">928032839</td>
+                            </tr>
+                            <tr>
+                                <td>Évora / Beja</td>
+                                <td colspan="2">928034032</td>
+                            </tr>
+                            <tr>
+                                <td>Alcácer / St André</td>
+                                <td colspan="2">928032839</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">SPOC - ZENER</td>
+                                <td>2ª linha (ligar se sectores não atende)</td>
+                                <td colspan="2">928021788</td>
+                            </tr>
+                            <tr>
+                                <td>3ª linha (ligar se 2ª linha não atende)</td>
+                                <td colspan="2">928034894</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">SPOC - CME</td>
+                                <td>1ª linha</td>
+                                <td colspan="2">931048171</td>
+                            </tr>
+                            <tr>
+                                <td>2ª linha (ligar se 1ª linha não atende)</td>
+                                <td colspan="2">931048314</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
