--- a/index.htm
+++ b/index.htm
@@ -42,7 +42,7 @@
 
     <!-- Helper -->
     <div id="accordion">
-        <div id="helperNoc" data-bs-parent="#accordion" class="collapse" style="margin-top: 80px;">
+        <div id="helperNoc" data-bs-parent="#accordion" class="collapse show" style="margin-top: 80px;">
             <div class="container-sm d-flex flex-column">
 
                 <form class="form-floating text-dark mb-2 w-75 align-self-center">
@@ -164,7 +164,7 @@
         </div>
 
         <!-- MATRIZ DE ESCALAMENTO-->
-        <div id="matrizEscalamento" data-bs-parent="#accordion" class="collapse show" style="margin-top: 80px;">
+        <div id="matrizEscalamento" data-bs-parent="#accordion" class="collapse" style="margin-top: 80px;">
             <div class="container">
                 <div class="table-responsive">
                     <table class="table align-middle text-center table-bordered table-striped table-dark">
