--- a/index.htm
+++ b/index.htm
@@ -64,7 +64,7 @@
 
                 <select id="select" class="form-select text-white bg-primary my-3 w-75 align-self-center">
                     <option value="Afetação dispersa.">Afetação dispersa.</option>
-                    <option value="Em análise.">Em análise</option>
+                    <option value="Em análise.">Em análise.</option>
                     <option value="SPOC ZENER contactado e informado.">SPOC ZENER contactado e informado.</option>
                     <option value="SPOC CME contactado e informado.">SPOC CME contactado e informado.</option>
                     <option value="Tentativa de contacto sem sucesso SPOC ZENER xxx.">Tentativa de contacto sem sucesso
