--- a/index.htm
+++ b/index.htm
@@ -164,7 +164,7 @@
         </div>
 
         <!-- MATRIZ DE ESCALAMENTO-->
-        <div id="matrizEscalamento" data-bs-parent="#accordion" class="collapse" style="margin-top: 80px;">
+        <div id="matrizEscalamento" data-bs-parent="#accordion" class="collapse show" style="margin-top: 80px;">
             <div class="container">
                 <div class="table-responsive">
                     <table class="table align-middle text-center table-bordered table-striped table-dark">
@@ -287,9 +287,17 @@
                             </tr>
                             <tr>
                                 <td rowspan="26">Level 2</td>
-                                <td rowspan="6">Zener - sectores</td>
+                                <td rowspan="7">Zener - sectores</td>
                                 <td>Palmela / Lisboa</td>
                                 <td colspan="2">928043168</td>
+                            </tr>
+                            <tr>
+                                <td class="text-warning fw-bold">
+                                    Provisório Palmela / Lisboa
+                                </td>
+                                <td colspan="2" class="text-warning">
+                                    Vitor Santos 928098494
+                                </td>
                             </tr>
                             <tr>
                                 <td>Caldas da Rainha</td>
